# tcm-hybrid-cvs

./: .cvsignore  BUGS  ChangeLog  INSTALL  LICENSE  Makefile.bill  Makefile.in  README  README-WINGATES  README-csircd  README.FIRST  configure  configure.ac  install-sh
HISTORY/: README  README-DNS_SPOOFING  README-LOCAL_O  README-WINGATES  README-csircd  README-tcm-hybrid  README.FIRST
autoconf/: configure.ac  configure.in
etc/: .cvsignore  dynamic.hosts  example.conf  motd.txt  tcm.cf  tcm.motd  userlist.cf
help/: help  help.action  help.actions  help.admin  help.bots  help.check  help.classt  help.clones  help.close  help.connections  help.cycle  help.die  help.disconnect  help.dline  help.domains  help.events  help.exempts  help.failures  help.help  help.hmulti  help.info  help.jupe  help.kflood  help.kill  help.killlist  help.linking  help.listdump  help.locops  help.mem  help.motd  help.nfind  help.nflood  help.op  help.opers  help.quote  help.register  help.rehash  help.remote  help.restart  help.save  (+16 more)
html/: admin.html  clones.html  linking.html  remote.html  tcm.html  tcm_cfg.html  userlist.html
include/: abuse.h  actions.h  bothunt.h  client_list.h  commands.h  conf.h  config.h  dcc.h  event.h  handler.h  hash.h  ipv6.h  logging.h  match.h  modules.h  numeric.h  parse.h  patchlevel.h  proxy.h  respond.h  seedrand.h  serno.h  serverif.h  setup.h.in  skline.h  stdcmds.h  tcm.h  tcm_io.h  token.h  tools.h  userlist.h  util.h  wild.h  wingate.h
libopm/: LICENSE  Makefile.am  Makefile.in  aclocal.m4  acsite.m4  config.guess  config.sub  configure  configure.in  depcomp  install-sh  ltmain.sh  missing  mkinstalldirs
libopm/OPM/: Changes  Makefile.PL  OPM.pm  OPM.xs  README  bopchecker.pl  test.pl  typemap
libopm/doc/: Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  libopm-api.txt
libopm/src/: Makefile.am  Makefile.in  compat.c  compat.h  config.c  config.h  inet.c  inet.h  libopm.c  libopm.h  list.c  list.h  malloc.c  malloc.h  opm.h  opm_common.h  opm_error.h  opm_types.h  proxy.c  proxy.h  setup.h.in  snprintf.c  snprintf.h  test.c
logs/: .cvsignore
src/: .cvsignore  .depend  Makefile.in  abuse.c  actions.c  bothunt.c  client_list.c  clones.c  commands.c  conf.c  dcc.c  dcc_commands.c  event.c  handler.c  hash.c  ipv6.c  logging.c  main.c  match.c  modules.c  parse.c  proxy.c  respond.c  seedrand.c  serv_commands.c  serverif.c  services.c  skline.c  stdcmds.c  strdup.c  tcm_io.c  tcm_lexer.l  tcm_parser.y  token.c  tools.c  userlist.c  util.c  vclones.c  wild.c  wingate.c
tools/: Makefile  Makefile.in  csircd-tcm.diff  mkpass.c  mkpasswd.c  tcm.check
