dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/tcm.h)

AC_CONFIG_AUX_DIR(autoconf)
AC_CONFIG_HEADER(include/setup.h)

PACKAGE=tcm-hybrid
VERSION=3.0.1
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

DPATH=`pwd`
AC_SUBST(DPATH)

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
AC_CANONICAL_SYSTEM
AC_PROG_MAKE_SET
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(CP,cp)
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -lnsl:
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_FUNC(res_mkquery,, AC_CHECK_LIB(resolv, res_mkquery))
AC_CHECK_LIB(socket, socket)
AC_CHECK_FUNC(crypt,, AC_CHECK_LIB(descrypt, crypt,,AC_CHECK_LIB(crypt, crypt,,)))

AC_CHECK_FUNC(dlopen,, AC_CHECK_LIB(dl, dlopen))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/socketvar.h sys/stream.h crypt.h)

dnl Check for stdarg.h - if we can't find it, halt configure
AC_CHECK_HEADER(stdarg.h, , AC_MSG_ERROR(** stdarg.h could not be found - tcm-hybrid will not compile without it **))

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

AC_OUTPUT(Makefile src/Makefile tools/Makefile modules/Makefile)


